add message page

--- a/src/views/main.less
+++ b/src/views/main.less
@@ -216,7 +216,9 @@
         z-index: 1;
         transition: left .3s;
         .single-page {
-            margin: 10px;
+            // margin: 10px;
+            box-sizing: border-box;
+            height: 100%;
         }
     }
     &-copy {
