--- a/src/views/sys/message-manage/messageManage.less
+++ b/src/views/sys/message-manage/messageManage.less
@@ -14,7 +14,7 @@
     width: 70%;
     // height: 500px;
     .message-record {
-      height: 500px;
+      height: 650px;
       .contactor {
         text-align: center;
       }
@@ -25,7 +25,7 @@
           border-radius: 3px;
           box-shadow: 2em;
           width: 100px;
-          margin-bottom: 10px;
+          margin: 10px 10px 10px;
           line-height: 40px;
           font-size: 18px;
           padding:0 10px;
