--- a/src/views/sys/message-manage/messageManage.less
+++ b/src/views/sys/message-manage/messageManage.less
@@ -19,7 +19,7 @@
         text-align: center;
       }
       ul {
-        .single-msg {
+        .single-msg-send {
           height: 40px;
           background: rgba(185, 236, 144, 0.856);
           border-radius: 3px;
